@@ -6,12 +6,12 @@
 # See the GConf manual for details
 
 # Look first in systemwide mandatory settings directory
-xml:readonly:@EXPANDED_SYSGCONFDIR@/gconf.xml.mandatory
+xml:readonly:@sysgconfdir@/gconf.xml.mandatory
 
 # To read in any mandatory settings that the Sys Admin may have created
 # prior to a desktop system upgrade. The SysAdmin can stick read-only system
 # wide sources in this file.
-include @EXPANDED_SYSGCONFDIR@/2/local-mandatory.path
+include @sysgconfdir@/2/local-mandatory.path
 
 # Now see where users want us to look - basically the user can stick arbitrary 
 # sources in a ~/.gconf.path file and they're inserted here
@@ -23,10 +23,10 @@ xml:readwrite:$(HOME)/.gconf
 # To read in any defaults settings that the Sys Admin may have created
 # prior to a desktop system upgrade. The SysAdmin can stick default values
 # system-wide in this file.
-include @EXPANDED_SYSGCONFDIR@/2/local-defaults.path
+include @sysgconfdir@/2/local-defaults.path
 
 # Finally, look at the systemwide defaults
-xml:readonly:@EXPANDED_SYSGCONFDIR@/gconf.xml.defaults
+xml:readonly:@sysgconfdir@/gconf.xml.defaults
 
 
 
